<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mi Spotify</string>

    <string name="enter_your_name">Introduce tu nombre</string>
    <string name="start_adventure">Comenzar Aventura</string>
    <string name="spotify_premium_message">Estás usando Spotify Premium,\npor ser alumno del IES Camas te sale por 0€ al mes.</string>

    <string name="welcome_user">¡Hola, %s!</string>
    <string name="genre_question">¿Qué música te gusta más?</string>
    <string name="reggaeton">Trap</string>
    <string name="trap">Reggaeton</string>
    <string name="reggaeton_activity_title">Sala Reggaeton</string>
    <string name="trap_activity_title">Sala Trap</string>

    <string name="back">Volver</string>
    <string name="play">Iniciar</string>
    <string name="pause">Pausar</string>
    <string name="stop">Detener</string>

    <string name="reggaeton_song_1_title">Donde estan las gatas</string>
    <string name="reggaeton_song_2_title">Travesuras</string>
    <string name="trap_song_1_title">Sola(REMIX)</string>
    <string name="trap_song_2_title">Problema</string>

    <string name="reggaeton_1_release_date">Lanzamiento: 13/07/2001</string>
    <string name="reggaeton_2_release_date">Lanzamiento: 21/06/2014</string>
    <string name="trap_1_release_date">Lanzamiento: 31/03/2017</string>
    <string name="trap_2_release_date">Lanzamiento: 09/10/2025</string>
</resources>