<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrapActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:id="@+id/cover_trap_1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_cover_3"
                android:contentDescription="Portada Canción 1" />

            <TextView
                android:id="@+id/date_trap_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/trap_1_release_date"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

            <TextView
                android:id="@+id/title_trap_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trap_song_1_title"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="8dp">

                <Button
                    android:id="@+id/btn_play_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play" />

                <Button
                    android:id="@+id/btn_pause_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/pause" />

                <Button
                    android:id="@+id/btn_stop_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp" />

            <ImageView
                android:id="@+id/cover_trap_2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_cover_4"
                android:contentDescription="Portada Canción 2" />

            <TextView
                android:id="@+id/date_trap_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/trap_2_release_date"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

            <TextView
                android:id="@+id/title_trap_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trap_song_2_title"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <Button
                    android:id="@+id/btn_play_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play" />

                <Button
                    android:id="@+id/btn_pause_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/pause" />

                <Button
                    android:id="@+id/btn_stop_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:text="@string/back"
                style="?attr/materialButtonOutlinedStyle" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>